2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkeditable.h: Match parameter names to make gtk-doc happy.

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfontsel.c: Merge docs inline.

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkprintsettings.c:
	* gtk/gtkbindings.c:
	* gtk/gtkstyle.c: Doc fixes

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkscrolledwindow.c: 
	* gtk/gtkscale.c: Merge docs inline.

2008-12-28  Ryan Lortie  <desrt@desrt.ca>

	small fix for "Paned Window Widgets" example

	* docs/tutorial/gtk-tut.sgml: use gtk_container_add rather than
	add_with_viewport for putting a GtkTreeView into a ScrolledWindow

	Spotted by Benjamin Herrenschmidt

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimmodule.c:
	* gtk/gtkseparatortoolitem.c: Doc fixes

	* gtk/gtkfontsel.c:
	* gtk/gtkeditable.c: Merge docs inline.

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkhsv.c:
	* gtk/gtkwidget.c: 
	* gtk/gtkaccelgroup.c: Documentation fixes

	* gtk/gtkstatusicon.c:
	* gtk/gtkentry.c:
	* gtk/gtkeditable.[hc]: Make parameter names match to make gtk-doc
	happy.

2008-12-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Expand the docs some more.

2008-12-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Don't emit ::icon-pressed on nonactivatable
	icons. Fix up docs to match actual api.

	* tests/testentryicons.c: Reshuffle tests a bit. Add a DND test.

2008-12-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Fix interaction between icons and widget sensitivity.
	Also fix a few typos.

	* tests/testentryicons.c: Add property editors.
	* tests/Makefile.am: Glue

2008-12-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Allow builtin icons when loading themed icons,
	and don't leak a GtkIconInfo.

2008-12-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Emit ::icon-pressed regardless which button was