@@ -1,5 +1,9 @@
 2008-12-28  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkimagemenuitem.c: Doc fixes
+
+2008-12-28  Matthias Clasen  <mclasen@redhat.com>
+
 	* gtk/gtkeditable.h: Match parameter names to make gtk-doc happy.
 
 2008-12-28  Matthias Clasen  <mclasen@redhat.com>
